--- a/application/admin/view/public/admin_base.html
+++ b/application/admin/view/public/admin_base.html
@@ -48,20 +48,21 @@
                         <li><i class="fa fa-arrow-left" onClick="javascript:window.history.back(-1)" /></i></li>
                         {/if}
                         <li><i class="fa fa-home"
-                                onClick="window.location.href='{:url(\'admin/Home/index\')}';"></i>控制面板</li>
+                                onClick="window.location.href='{:url(\'admin/Home/index\')}';"></i>主页</li>
                         {block name="page-breadcrumb"}{/block}
                     </ul>
-                    <div class="navbar-header pull-right" style="margin-right: 50px;">
+                    <div class="navbar-header pull-right" style="margin-right: 10px;">
                         <div class="navbar-account">
                             <a class="login-area dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
                                 <section style="min-width:30px">
-                                    <span class="profile"><span>{:session('admin.username')}</span></span>
-                                    </>
+                                    <span class="profile"><span><i class="fa fa-user-circle fa-lg fa-fw" aria-hidden="true"></i></span></span>
+                                    <!-- <span class="profile"><span>{:session('admin.username')}</span></span> -->
                                 </section>
                             </a>
                             <!--Login Area Dropdown-->
                             <ul class="pull-right dropdown-menu dropdown-arrow dropdown-login-area">
                                 <li class="dropdown-footer">
+                                    <a href="#">{:session('admin.username')}</a>
                                     <a href="#" class="loginout">退出</a>
                                 </li>
                             </ul>
