--- a/application/admin/view/rule/group.html
+++ b/application/admin/view/rule/group.html
@@ -1,6 +1,10 @@
 {extend name="public/admin_base"}
 
 {block name="title"}用户组管理{/block}
+{block name="page-breadcrumb"}
+<li>权限管理</li>
+<li class="active">分配权限</li>
+{/block}
 {block name="page-main"}
 <div class="row">
 	<div class="col-lg-12">
@@ -15,10 +19,10 @@
 			</ul>
 			<div class="widget-body">
 				<div class="tabbable">
-					<div class="tab-content">
+					<div class="table-responsive">
 						<table class="table table-striped table-bordered table-hover table-condensed">
 							<tr>
-								<th>用户组id</th>
+								<th>组id</th>
 								<th>用户组名</th>
 								<th>操作</th>
 							</tr>
