--- a/application/admin/view/rule/rule_group.html
+++ b/application/admin/view/rule/rule_group.html
@@ -1,6 +1,10 @@
 {extend name="public/admin_base"}
 
 {block name="title"}分配权限{/block}
+{block name="page-breadcrumb"}
+<li>权限管理</li>
+<li class="active">分配权限</li>
+{/block}
 {block name="page-main"}
 <div class="row">
 	<div class="col-lg-12">
