--- a/application/admin/view/home/index.html
+++ b/application/admin/view/home/index.html
@@ -86,10 +86,10 @@ a {
 {block name="page-js"}
 <script language="javascript">
     //防止页面后退
-    history.pushState(null, null, document.URL);
-    window.addEventListener('popstate', function () {
-        history.pushState(null, null, document.URL);
-    });
+    // history.pushState(null, null, document.URL);
+    // window.addEventListener('popstate', function () {
+    //     history.pushState(null, null, document.URL);
+    // });
 </script>
 
 
