--- a/application/admin/view/cov/per_day_reports.html
+++ b/application/admin/view/cov/per_day_reports.html
@@ -51,15 +51,15 @@
                                 <td style="width: 50px;">{$vo.get_profile.username} </td>
 
                                 <td style="width: 30%;">
-                                    
+
                                     <a href="#" class="toBigPic" picPath="/{$vo.report_pic_path}">
-                                        <i class="fa fa-picture-o" aria-hidden="true"></i>
+                                        <i class="fa fa-picture-o fa-2x" aria-hidden="true"></i>
                                     </a>
                                     <!-- <img class="report_pic" src="/{$vo.report_pic_path}" alt="" srcset=""></td> -->
                                 <td>
                                     {volist name="$vo.phone_pic_path" id="vvo" key="k"}
                                     <a href="#" class="toBigPic" picPath="/{$vvo}">
-                                        <i class="fa fa-picture-o" aria-hidden="true"></i>
+                                        <i class="fa fa-picture-o fa-2x" aria-hidden="true"></i>
                                     </a>
                                     <!-- <img class="report_pic" src="/{$vvo}" alt="" srcset=""> -->
                                     {/volist}
@@ -69,8 +69,9 @@
                         </tbody>
                     </table>
                     <div class="form-group text-align-right" style="margin-top: 20px;">
-                        <a href="{:url('admin/Cov/downPerDayReports',['date'=>$date])}"><button type="button"
-                                id="downReport" class="btn btn-info">
+                        <a href="{:url('admin/Cov/downPerDayReports',['date'=>$date])}">
+                            <button type="button" id="downReport" {empty name="datas" } disabled {/empty}
+                                class="btn btn-info">
                                 下载今日报告
                             </button></a>
                     </div>
