--- a/application/admin/view/public/_left.html
+++ b/application/admin/view/public/_left.html
@@ -28,7 +28,12 @@
                 </li>
                 {/if}
             {/volist}
-       
+            <li>
+                <a href="{:url('admin/Home/help')}">
+                    <i class="fa fa-info fa-lg fa-fw" aria-hidden="true"></i>
+                    <span class="menu-text">帮助手册</span>
+                </a>
+            </li>
     </ul>
 </div>
 <!-- /Page Sidebar -->
