--- a/application/admin/view/templates/add.html
+++ b/application/admin/view/templates/add.html
@@ -1,7 +1,7 @@
 {extend name="public/admin_base"}
-{block name="title"}创建表单{/block}
+{block name="title"}新建表单{/block}
 {block name="page-breadcrumb"}
-<li class="active">创建表单</li>
+<li class="active">新建表单</li>
 {/block}
 {block name="page-main"}
 
