--- a/application/admin/view/home/index.html
+++ b/application/admin/view/home/index.html
@@ -45,7 +45,21 @@ a {
             </div>
             {/if}
             {/volist}
-
+            <div class="row">
+                <div class="col-lg-12">
+                    <legend style="font-size: 14px;">系统</legend>
+                    <a href="{:url('admin/Home/help')}">
+                        <div class="col-xs-2 home-icon">
+                            <div class="home-icon-fa">
+                                <i style="color: rgba(89, 144, 216, 0.76);" class="fa fa-info fa-3x fa-fw" aria-hidden="true"></i>
+                            </div>
+                            <div class="home-icon-text">
+                                <span>帮助手册</span>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
             <div class="footer"></div>
         </div>
         <!-- <table class="table table-hover table-bordered">
