--- a/application/admin/view/rule/index.html
+++ b/application/admin/view/rule/index.html
@@ -31,7 +31,7 @@
 								<a href="javascript:;" ruleId="{$vo['id']}" level="{$vo['level']}"
 									onclick="add_child(this)">添加子权限</a> |
 								<a href="javascript:;" ruleId="{$vo['id']}" ruleName="{$vo['name']}"
-									ruleTitle="{$vo['title']}" ruleIcon="{$vo['icon']}" onclick="edit(this)">修改</a> |
+									ruleTitle="{$vo['title']}" ruleIcon="{$vo['icon']}" ruleSort="{$vo['sort']}" onclick="edit(this)">修改</a> |
 								<a dataid="{$vo.id}" class="deleteThis">删除</a>
 							</td>
 						</tr>
@@ -43,7 +43,7 @@
 								<a href="javascript:;" ruleId="{$vo2['id']}" level="{$vo2['level']}"
 									onclick="add_child(this)">|—— 添加子权限</a> |
 								<a href="javascript:;" ruleId="{$vo2['id']}" ruleName="{$vo2['name']}"
-									ruleTitle="{$vo2['title']}" ruleIcon="{$vo2['icon']}" onclick="edit(this)">修改</a> |
+									ruleTitle="{$vo2['title']}" ruleIcon="{$vo2['icon']}" ruleSort="{$vo2['sort']}" onclick="edit(this)">修改</a> |
 
 								<a dataid="{$vo2.id}" class="deleteThis">删除</a>
 							</td>
@@ -54,7 +54,7 @@
 							<td>{$vo3['name']}</td>
 							<td>|———
 								<a href="javascript:;" ruleId="{$vo3['id']}" ruleName="{$vo3['name']}"
-									ruleTitle="{$vo3['title']}" onclick="edit(this)">修改</a> |
+									ruleTitle="{$vo3['title']}" ruleSort="{$vo3['sort']}" onclick="edit(this)">修改</a> |
 
 								<a dataid="{$vo3.id}" class="deleteThis">删除</a>
 							</td>
@@ -105,7 +105,13 @@
 								<tr>
 									<th>等级:</th>
 									<td>
-										<input disabled class="input-medium" type="text" name="level">
+										<input readonly="true" class="input-medium" type="text" name="level">
+									</td>
+								</tr>
+								<tr>
+									<th>排序值:</th>
+									<td>
+										<input class="input-medium" type="text" name="sort">
 									</td>
 								</tr>
 								<tr>
@@ -159,6 +165,12 @@
 									</td>
 								</tr>
 								<tr>
+									<th>排序值:</th>
+									<td>
+										<input class="input-medium" type="text" name="sort">
+									</td>
+								</tr>
+								<tr>
 									<th></th>
 									<td>
 										<input class="btn btn-success" type="button" id="editThis" value="修改">
@@ -204,10 +216,12 @@
 			var ruletitle = $(obj).attr('ruletitle');
 			var ruleName = $(obj).attr('ruleName');
 			var ruleIcon = $(obj).attr('ruleIcon');
+			var ruleSort = $(obj).attr('ruleSort');
 			$("input[name='id']").val(ruleId);
 			$("input[name='title']").val(ruletitle);
 			$("input[name='name']").val(ruleName);
 			$("input[name='icon']").val(ruleIcon);
+			$("input[name='sort']").val(ruleSort);
 			$('#bjy-edit').modal('show');
 		}
 
