--- a/application/admin/view/cov/index.html
+++ b/application/admin/view/cov/index.html
@@ -1,5 +1,7 @@
 {extend name="public/admin_base"}
-
+{block name="title"}
+Cov报告列表
+{/block}
 {block name="page-main"}
 <div class="row">
     <div class="col-xs-12">
