--- a/application/admin/view/cov/per_day_reports.html
+++ b/application/admin/view/cov/per_day_reports.html
@@ -1,5 +1,8 @@
 {extend name="public/admin_base"}
+{block name="title"}
+{$title}
 
+{/block}
 {block name="page-main"}
 <div class="row">
     <div class="col-xs-12">
