--- a/application/index/view/template/template.html
+++ b/application/index/view/template/template.html
@@ -13,130 +13,94 @@
     <!-- Bootstrap core CSS -->
     <link href="__CSS__/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap theme -->
-    <link href="__CSS__/bootstrap-theme.min.css" rel="stylesheet">
-    <link href="__CSS__/font-awesome.min.css" rel="stylesheet">
-    <link href="__CSS__/mysite.css" rel="stylesheet">
+    <!-- <link href="__CSS__/bootstrap-theme.min.css" rel="stylesheet"> -->
+    <!-- <link href="__CSS__/span-awesome.min.css" rel="stylesheet"> -->
+    <link href="__CSS__/index.css" rel="stylesheet">
 
-    <style>
-        html {
-            overflow-x: hidden;
-            overflow-y: auto;
-        }
-
-        body {
-
-            background-image: url("__IMG__/bg.jpg");
-
-            background-position: center 0;
-
-            background-repeat: no-repeat;
-
-            background-attachment: fixed;
-
-            background-size: cover;
-
-            -webkit-background-size: cover;
-
-            -o-background-size: cover;
-
-            -moz-background-size: cover;
-
-            -ms-background-size: cover;
-
-        }
-
-        .project-block-backgound {
-            background: #fff;
-            border-radius: 4px;
-        }
-
-        #subForm {
-            margin: 20px 30px 50px 30px;
-        }
-
-        #subForm label.error {
-            color: red;
-        }
-
-        .redInfo {
-            position: relative;
-            top: 2px;
-            font-weight: bold;
-            font-size: 16px;
-            color:red
-        }
-        .form-control{
-            height: 40px;
-        }
-    </style>
 </head>
 
 
 <body>
     <div class="container" style="margin-top: 50px;margin-bottom: 50px;">
         <div class="row col-lg-offset-2">
-            <div class="col-lg-8 project-block-background" style="padding-bottom:20px;padding-top:20px;">
-                {present name="$info"}
-                <h1>{$info}</h1>
-                {else /}
+            <div class="col-lg-8 form-block-background" style="padding-bottom:20px;padding-top:20px;">
+                {notpresent name="$info"}
                 <form class="form-horizontal" role="form" id="subForm" autocomplete="off">
-                    <legend style="text-align: center;font-size:28px;">{$tname}</legend>
-                    <!-- 输出input -->
+                    <legend style="text-align: center;span-size:28px;">{$tname}</legend>
+
                     {volist name="optionList" id="vo" key="k"}
-                        {notpresent name="$vo.options"}
-                            <div class="form-group">
-                                <label for="{$key}" class="col-lg-10">
-                                    {neq name="$vo.rule" value="text"}
-                                        <font class="redInfo">*
-                                        </font>
-                                    {/neq}
-                                    {$k}.&nbsp;&nbsp;{$vo.title}
+                    {notpresent name="$vo.options"}
+                    <!-- 输出input -->
+                    <div class="form-group">
+                        <label for="{$key}" class="col-lg-1">
+                            {neq name="$vo.rule" value="text"}
+                            <span class="redInfo">*
+                            </span>
+                            {/neq}
+                            {$k}.
+                        </label>
+                        <label for="{$key}" class="col-lg-10">
+                            {$vo.title}
+                        </label>
+                        <div class="col-lg-10">
+                            <input type="text" class="form-control  {$vo.rule|split}" id="{$key}" name="{$key}">
+                        </div>
+                    </div>
+                    {else /}
+                    <!-- 输出select -->
+                    {elt name="$vo.options|count" value="4"}
+                    <div class="form-group">
+                        <label for="{$key}" class="col-lg-1">
+                            {neq name="$vo.rule" value="text"}
+                            <span class="redInfo">*</span>
+                            {/neq}
+                            {$k}.
+                        </label>
+                        <label for="{$key}" class="col-lg-10">
+                            {$vo.title}
+                        </label>
+                        <div class="col-lg-10">
+                            <ul class="list-group">
+                                {foreach name="vo.options" item="voo" key="kk"}
+                                <label style="width:100%;" class="list-group-item">
+                                    <input type="radio" name="{$key}" value="{$voo}" checked="true"> {$voo}
                                 </label>
-                                <div class="col-lg-10">
-                                    <input type="text" class="form-control  {$vo.rule|split}" id="{$key}" name="{$key}">
-                                </div>
-                            </div>
-                        {else /}
-                            {elt name="$vo.options|count" value="4"}
-                                <div class="form-group">
-                                    <label for="{$key}" class="col-lg-10">
-                                        <font class="redInfo">*
-                                        </font>{$k}.{$vo.title}
-                                    </label>
-                                    <div class="col-lg-10">
-                                        <ul class="list-group">
-                                            {foreach name="vo.options" item="voo" key="kk"}
-                                            <label style="width:100%;" class="list-group-item">
-                                                <input type="radio" name="{$key}" value="{$voo}" checked="true"> {$voo}
-                                            </label>
-                                            {/foreach}
-                                        </ul>
-                                    </div>
-                                </div>
-                            {else /}
-                                <div class="form-group">
-                                    <label for="{$key}" class="col-lg-10">
-                                        <font class="redInfo">*
-                                        </font>{$k}.{$vo.title}
-                                    </label>
-                                    <div class="col-lg-10">
-                                        <select class="form-control" required="true" name="{$key}">
-                                            <option value="">--请选择--</option>
-                                            {volist name="vo.options" id="voo"}
-                                            <option value="{$voo}">{$voo}</option>
-                                            {/volist}
-                                        </select>
-                                    </div>
-                                </div>
-                            {/elt}
-                        {/notpresent}
+                                {/foreach}
+                            </ul>
+                        </div>
+                    </div>
+                    {else /}
+                    <div class="form-group">
+                        <label for="{$key}" class="col-lg-1">
+                            {neq name="$vo.rule" value="text"}
+                            <span class="redInfo">*
+                            </span>
+                            {/neq}
+                            {$k}.
+                        </label>
+                        <label for="{$key}" class="col-lg-10">
+                            {$vo.title}
+                        </label>
+                        <div class="col-lg-10">
+                            <select class="form-control" required="true" name="{$key}">
+                                <option value="">--请选择--</option>
+                                {volist name="vo.options" id="voo"}
+                                <option value="{$voo}">{$voo}</option>
+                                {/volist}
+                            </select>
+                        </div>
+                    </div>
+                    {/elt}
+                    {/notpresent}
                     {/volist}
                     <div class="form-group">
                         <input type="button" style="height: 40px;" class="btn btn-info form-control" id="submitOpt"
                             value="提交">
                     </div>
                 </form>
-                {/present}
+                {else /}
+                <h1>{$info}</h1>
+                {/notpresent}
             </div>
         </div>
     </div>
@@ -147,162 +111,7 @@
     <script src="__LIB__/layer_mobile/layer.js"></script>
     <script src="__JS__/jquery.validate.min.js"></script>
     <script src="__JS__/messages_zh.min.js"></script>
-    <script>
-
-        function IsPC() {
-            var userAgentInfo = navigator.userAgent;
-            var Agents = ["Android", "iPhone",
-                "SymbianOS", "Windows Phone",
-                "iPad", "iPod"];
-            var flag = true;
-            for (var v = 0; v < Agents.length; v++) {
-                if (userAgentInfo.indexOf(Agents[v]) > 0) {
-                    flag = false;
-                    break;
-                }
-            }
-            return flag;
-        };
-        var isPC = IsPC();
-        if (isPC) {
-            layer = layer;
-            function showMsg(msg) {
-                layer.msg(
-                    msg, {
-                    icon: 6,
-                    time: 2000
-                })
-            }
-
-            function showMsgAndHref(data) {
-                layer.msg(
-                    data.msg, {
-                    icon: 6,
-                    time: 2000
-                },
-                    function () {
-                        location.href = data.url;
-                    }
-                );
-            }
-
-            function showErrorMsg(msg) {
-                layer.open({
-                    title: "错误！",
-                    content: msg,
-                    icon: 5,
-                    anim: 5
-                });
-            }
-
-            function confirm(msg, title, url, data) {
-                layer.confirm(msg, {
-                    title: title,
-                    icon: 3
-                }, function (index) {
-                    layer.close(index);
-                    $.ajax({
-                        url: url,
-                        type: 'post',
-                        data: data,
-                        dataType: 'json',
-                        success: function (data) {
-                            if (data.code == 1) {
-                                showMsgAndHref(data)
-                            } else {
-                                showErrorMsg(data.msg)
-                            }
-                        }
-                    });
-                });
-            }
-        }
-        else {
-            layer = mobile;
-            function showMsg(msg) {
-                //提示
-                layer.open({
-                    content: msg
-                    , skin: 'msg'
-                    , time: 2 //2秒后自动关闭
-                });
-            }
-
-            function showMsgAndHref(data) {
-                layer.open({
-                    content: data.msg
-                    , btn: '我知道了'
-                    , end: function (index) {
-                        setTimeout(function () {
-                            // $.mobile.changePage(data.url); //手机网页式跳转
-                            location.href = data.url
-                        }, 1000);
-                    }
-                });
-            }
-            function showErrorMsg(msg) {
-                layer.open({
-                    content: msg
-                    , btn: '我知道了'
-                });
-            }
-
-            //询问框
-            function confirm(msg, title, url, data) {
-                layer.open({
-                    content: msg
-                    , btn: ['确认', '取消']
-                    , yes: function (index) {
-                        $.ajax({
-                            url: url,
-                            type: 'post',
-                            data: data,
-                            success: function (data) {
-                                if (data.code == 1) {
-                                    showMsgAndHref(data)
-                                } else {
-                                    showErrorMsg(data.msg)
-                                }
-                            }
-                        });
-                    }
-                });
-            }
-        }
-    </script>
-    <script>
-        $(function () {
-            $("#submitOpt").click(function () {
-                $("#subForm").submit()
-            })
-        })
-        $().ready(function () {
-            $("#subForm").validate(
-                {
-                    submitHandler: function (form) {
-                        $.ajax({
-                            url: "{:url('index/Template/collect')}",
-                            type: "post",
-                            dataType: 'json',
-                            data: $('form').serialize(),
-                            success: function (data) {
-                                if (data.code == 1) {
-                                    showMsgAndHref(data)
-                                } else if (data.code == 101) {
-                                    if (isPC) {
-                                        confirm(data.msg, '数据覆盖确认', "{:url('index/Template/collect')}", $('form').serialize())
-                                    } else {
-                                        confirm(data.msg, '该记录已存在，确认覆盖吗?', "{:url('index/Template/collect')}", $('form').serialize())
-                                    }
-                                } else {
-                                    showErrorMsg(data.msg)
-                                }
-                            },
-                        });
-                    }
-                });
-        });
-    </script>
+    <script src="__JS__/index.js"></script>
 </body>
 
 </html>
