--- a/application/index/view/template/template.html
+++ b/application/index/view/template/template.html
@@ -26,7 +26,7 @@
             <div class="col-lg-8 form-block-background" style="padding-bottom:20px;padding-top:20px;">
                 {notpresent name="$info"}
                 <form class="form-horizontal" role="form" id="subForm" autocomplete="off">
-                    <legend style="text-align: center;span-size:28px;">{$tname}</legend>
+                    <legend style="text-align: center;font-size:28px;">{$tname}</legend>
 
                     {volist name="optionList" id="vo" key="k"}
                     {notpresent name="$vo.options"}
