--- a/application/admin/view/index/login.html
+++ b/application/admin/view/index/login.html
@@ -28,9 +28,9 @@
                 <div class="loginbox-textbox">
                     <input type="password" class="form-control" name="password" placeholder="密码" onkeydown='if(event.keyCode==13){$("#login").click()}'/>
                 </div>
-                <!-- <div class="loginbox-forgot">
+                <div class="loginbox-forgot">
                     <a href="{:url('admin/Index/forget')}">忘记密码?</a>
-                </div> -->
+                </div>
                 <div class="loginbox-submit">
                     <input id="login" type="button" class="btn btn-primary btn-block" value="登录" />
                 </div>
