--- a/application/admin/view/cov/per_day_reports.html
+++ b/application/admin/view/cov/per_day_reports.html
@@ -55,13 +55,13 @@
 
                                 <td style="width: 30%;">
 
-                                    <a href="#" class="toBigPic" picPath="/{$vo.report_pic_path}">
+                                    <a href="#" class="toBigPic" picPath="{$vo.report_pic_path}">
                                         <i class="fa fa-picture-o fa-2x" aria-hidden="true"></i>
                                     </a>
                                     <!-- <img class="report_pic" src="/{$vo.report_pic_path}" alt="" srcset=""></td> -->
                                 <td>
                                     {volist name="$vo.phone_pic_path" id="vvo" key="k"}
-                                    <a href="#" class="toBigPic" picPath="/{$vvo}">
+                                    <a href="#" class="toBigPic" picPath="{$vvo}">
                                         <i class="fa fa-picture-o fa-2x" aria-hidden="true"></i>
                                     </a>
                                     <!-- <img class="report_pic" src="/{$vvo}" alt="" srcset=""> -->
